# NyxClient

./: Cargo.toml
cpp/explorer_hook/: CMakeLists.txt  library.cpp  library.h
cpp/touchpad_hook/: CMakeLists.txt  library.cpp  library.h
src/: client_icon.rs  lib.rs  main.rs  tray_icon.rs
src/event/: mod.rs
src/event/api/: EventAPI.rs  EventHandler.rs  event.rs  event_api.rs  mod.rs
src/event/impl/: EventWindows.rs  WindowsHookPublisher.rs  mod.rs
src/event/implementations/: event_command_line.rs  event_keyboard.rs  event_lifecycle.rs  event_mouse.rs  event_render2d.rs  event_tick.rs  mod.rs  windows_hook_publisher.rs  windows_session_publisher.rs
src/manager/: notification_manager.rs
src/modules/: Module.rs  mod.rs  module.rs
src/modules/impl/: mod.rs
src/modules/impl/other/: mod.rs
src/modules/impl/system/: mod.rs
src/modules/impl/visual/: mod.rs
src/modules/implementations/combat/: kill_aura.rs  mod.rs
src/modules/implementations/other/: fun.rs  mod.rs
src/modules/implementations/player/: better_touchpad.rs  fast_close.rs  mod.rs
src/modules/implementations/system/: click_gui.rs  mod.rs  stage_manager.rs
src/modules/implementations/visual/: live2d.rs  mod.rs  notification.rs
src/modules/value/: base_value.rs  mod.rs
src/utility/: mod.rs  process_utility.rs  render2d.rs
