[package]
name = "NyxClient"
version = "0.1.0"
edition = "2024"

[lib]
name = "nyx_client"
path = "src/lib.rs"

[dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
] }
