[package]
name = "NyxClient"
version = "0.1.0"
edition = "2024"

[lib]
name = "nyx_client"
path = "src/lib.rs"

[dependencies]
gl = "0.14.0"
serde_json = "1.0.150"
windows-numerics = "0.2.0"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Media",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_Urlmon",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
skija = { version = "0.99.0", package = "skia-safe" }
